speckle-syntax/src/item/snapshots/speckle_syntax__item__speckle_attribute__tests__speckle_attribute_bare.snap
---
source: speckle-syntax/src/item/speckle_attribute.rs
expression: "snapshot_speckle_attribute(\"#[speckle]\\nstruct Foo;\")"
---
byte_start: 0
byte_end: 10
arguments: []
